kubernetes/skywalker/application/homepage/homepage-edit.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: homepage-edit

spec:
  gateways:
    - cluster/feldman-in
  hosts:
    - homepage-edit.feldman.in
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: homepage-addon-codeserver
            port:
              number: 12321
