kubernetes/skywalker/application/homepage/homepage.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: homepage

spec:
  gateways:
    - cluster/feldman-in
  hosts:
    - homepage.feldman.in
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: homepage
            port:
              number: 3000
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: homepage-auth-policy
  namespace: cluster
spec:
  action: CUSTOM
  provider:
    name: "oauth2-proxy"
  rules:
  - to:
    - operation:
        hosts:
        - "homepage.feldman.in"
